Fix Youtube and Twitch Dashboards
